--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h1 style="padding: 1rem;align-items: center; margin: auto;text-align: center;">API Laboratorio Clinico "San Rafael"</h1>
   <section style="display: flex;padding: .5rem; gap: 2rem;border-top: 2px solid rgb(32, 32, 32);">
 
-    <!-- Lab, Cliente , Patiente , Role -->
+    <!-- Lab, Client , Patient , Role -->
     <article id="colum1" style="width:50%;border-right: 2px solid  rgb(11, 11, 11);">
       <!-- API Lab-->
       <div>
@@ -71,6 +71,10 @@
       <div>
         <h2>API Client</h2>
         <ul style="padding-bottom: 2rem;">
+          <li>
+            <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Consultar Clientes</span></p> 
+            <span>https://lab-san-rafael-api.onrender.com/client</span>
+          </li>
           <li>
             <div style="display:flex;gap: 2rem;">
                 <p>GET</p> 
