listo api lab solo falta path y algunas valiaciones4

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  "address":"65JG+H7V, Ciudad Guayana 8050, Bolívar. Urb Gran Sabana",
  "phone":"0286-9530505",
  "email":"lab@gmail.com",
- "logo":"https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg",
+ "logo":"imagen.jpg",
  "objetive":"objetivos de lab",
  "mission":"misiones de lab",
  "vision":"vision de lab"
@@ -73,19 +73,12 @@
         <ul style="padding-bottom: 2rem;">
           <li>
             <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Consultar Clientes</span></p> 
-            <span>https://lab-san-rafael-api.onrender.com/client</span>
-          </li>
-          <li>
-            <div style="display:flex;gap: 2rem;">
-                <p>GET</p> 
-                <p>/person</p>
-                <p>Lorem  elit. In suscipit nostrum ex ipsa fugit nisi vero.</p>
-            </div>
+            <span>https://lab-san-rafael-api.onrender.com/clients</span>
           </li>
           <li>
             <div style="display:flex;gap: 2rem;">
               <p>POST</p> 
-              <p>/person</p>
+              <p>/client</p>
               <p>Consulta todas las clients</p>
             </div>
           </li>
@@ -110,28 +103,25 @@
       <div>
         <h2>API Patient</h2>
         <ul>
-          <li> 
-          <div style="display:flex;gap: 2rem;">
-            <p>GET</p> 
-            <p>/patient</p>
-            <p>Consulta todas las patient</p>
-          </div>
-        </li>
-       <li>
+          <li >    
+            <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Consulta todos los Pacientes</span></p> 
+            <span>https://lab-san-rafael-api.onrender.com/patients</span>
+          </li>
+        <li>
           <div style="display:flex;gap: 2rem;">
             <p>POST</p> 
             <p>/patient</p>
             <p>Consulta todas las clients</p>
           </div>
-       </li>
-       <li>
-        <div style="display:flex;gap: 2rem;">
-            <p>PATH</p> 
-            <p>/patient</p>
-            <p>Consulta todas las clients</p>
-          </div>
         </li>
         <li>
+          <div style="display:flex;gap: 2rem;">
+              <p>PATH</p> 
+              <p>/patient</p>
+              <p>Consulta todas las clients</p>
+            </div>
+          </li>
+          <li>
           <div style="display:flex;gap: 2rem;">
             <p>DELETE</p> 
             <p>/patient</p>
@@ -145,34 +135,31 @@
       <div>
             <h2>API Role</h2>
             <ul>
-             <li> 
-             <div style="display:flex;gap: 2rem;">
-               <p>GET</p> 
-               <p>/role</p>
-               <p>Consulta todas las clients</p>
-             </div>
-         </li>
-         <li>
-           <div style="display:flex;gap: 2rem;">
-             <p>POST</p> 
-             <p>/role</p>
-             <p>Consulta todas las clients</p>
-           </div>
-         </li>
-         <li>
-           <div style="display:flex;gap: 2rem;">
-             <p>PATH</p> 
-             <p>/role</p>
-             <p>Consulta todas las clients</p>
-           </div>
-         </li>
-         <li>
-           <div style="display:flex;gap: 2rem;">
-             <p>DELETE</p> 
-             <p>/role</p>
-             <p>Consulta todas las clients</p>
-           </div>
-         </li>
+              <li >    
+                <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Consulta todos los Roles</span></p> 
+                <span>https://lab-san-rafael-api.onrender.com/roles</span>
+              </li>
+              <li>
+                <div style="display:flex;gap: 2rem;">
+                  <p>POST</p> 
+                  <p>/roles</p>
+                  <p>Consulta todas las clients</p>
+                </div>
+              </li>
+              <li>
+                <div style="display:flex;gap: 2rem;">
+                  <p>PATH</p> 
+                  <p>/role</p>
+                  <p>Consulta todas las clients</p>
+                </div>
+              </li>
+              <li>
+                <div style="display:flex;gap: 2rem;">
+                  <p>DELETE</p> 
+                  <p>/role</p>
+                  <p>Consulta todas las clients</p>
+                </div>
+              </li>
        </ul>
       </div>
     </article>
