listo api lab solo falta path y algunas valiaciones6

--- a/index.html
+++ b/index.html
@@ -225,12 +225,9 @@
       <div>
         <h2>API Exam</h2>
         <ul>
-          <li> 
-              <div style="display:flex;gap: 2rem;">
-                <p>GET</p> 
-                <p>/exam</p>
-                <p>Consulta todas las clients</p>
-              </div>
+          <li >    
+            <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Consulta todos los Examenes</span></p> 
+            <span>https://lab-san-rafael-api.onrender.com/exams</span>
           </li>
           <li>
             <div style="display:flex;gap: 2rem;">
