listo api lab solo falta path y algunas valiaciones11

--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
             <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Consulta todos los Examenes</span></p> 
             <span>https://lab-san-rafael-api.onrender.com/exams</span>
           </li>
+          <li>    
+            <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Devuelva examenes pertenecen a una categoria por su ID</span></p> 
+            <span>https://lab-san-rafael-api.onrender.com/exams?_category={id}</span>
+          </li>
           <li>
             <div style="display:flex;gap: 2rem;">
               <p>POST</p> 
@@ -244,7 +248,7 @@
         <h2>API Category</h2>
         <ul>
           <li>    
-            <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Ver Categorias</span></p> 
+            <p class="listo" style="font-weight: bold;">GET : <span style="color: black;">Devuelva el listado de todas las categorias</span></p> 
             <span>https://lab-san-rafael-api.onrender.com/categorys</span>
           </li>
           <li>
