Editing Auth Token

--- a/index.html
+++ b/index.html
@@ -138,10 +138,14 @@
           <summary style="margin: 1rem; font-size: x-large; font-weight: 600;">
               API Client <span class="proceso">&#x2615;&#xfe0e;</span>
           </summary>
+     
           <ul>
             <li>
+              <span class="listo">For authorization use "Bearer Token</span>
+            </li>
+            <li>
               <p class="negrita">
-                <span class="grande">GET :</span>
+                <span class="listo">GET :</span>
                 Consulta todos los  Clientes
                 <span class="listo">&#x1f5f9;</span>
               </p>
